Added charts in sparemoney and investment

--- a/client/app/spareMoney/spareMoney.html
+++ b/client/app/spareMoney/spareMoney.html
@@ -8,8 +8,5 @@
 </header>
 
 <div>
-  <div id="pie-chart-spare">
-    <canvas id="myChart" width="400" height="400"></canvas>
-  </div>
-
+  <highchart id="spareMoney" config="sparemoney.sparedata"></highchart>
 </div>
