--- a/client/app/investment/investment.html
+++ b/client/app/investment/investment.html
@@ -5,3 +5,7 @@
     <img src="assets/images/dollar_sign.jpg" alt="I'm MoneyMultiplier" width="100px" height="100px">
   </div>
 </header>
+
+<highchart id="mfReliance" config="investment.mfReliance"></highchart>
+
+<highchart id="mfIcici" config="investment.mfIcici"></highchart>
