updated limit and upload pdf page

--- a/client/app/bankDetails/bankDetails.html
+++ b/client/app/bankDetails/bankDetails.html
@@ -3,5 +3,14 @@
     <h3>Welcome {{ bank.getCurrentUser().name }}!</h3>
     <p class="lead">Kick-start your money Saving and Invest in top Funds!!!</p>
     <img src="assets/images/dollar_sign.jpg" alt="I'm MoneyMultiplier" width="100px" height="100px">
+    <section>
+      <div class="row">
+        <div class="center-block">
+          <h2>Name:- Suhit S Kalubarme</h2>
+          <h4>Address:-Magarpatta City, Pune </h4>
+          <h4 style="color: #46d928;font: bold">Current Balance:-200,000/- </h4>
+        </div>
+      </div>
+    </section>
   </div>
 </header>
