--- a/client/app/limit/limit.html
+++ b/client/app/limit/limit.html
@@ -3,5 +3,23 @@
     <h3>Welcome {{ limit.getCurrentUser().name }}!</h3>
     <p class="lead">Kick-start your money Saving and Invest in top Funds!!!</p>
     <img src="assets/images/dollar_sign.jpg" alt="I'm MoneyMultiplier" width="100px" height="100px">
+    <section>
+      <div class="row">
+        <div class="center-block">
+          <h2>Put Monthly Limit</h2>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4 col-lg-offset-4">
+          <div class="input-group">
+            <input type="text" class="form-control" />
+            <span class="input-group-btn">
+                <button class="btn btn-default" type="button">Click me!</button>
+            </span>
+          </div><!-- /input-group -->
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+    </section>
   </div>
 </header>
