--- a/client/app/bankDetails/bankDetails.html
+++ b/client/app/bankDetails/bankDetails.html
@@ -4,11 +4,18 @@
     <p class="lead">Kick-start your money Saving and Invest in top Funds!!!</p>
     <img src="assets/images/dollar_sign.jpg" alt="I'm MoneyMultiplier" width="100px" height="100px">
     <section>
+      <hr />
       <div class="row">
         <div class="center-block">
           <h2>Name:- Suhit S Kalubarme</h2>
           <h4>Address:-Magarpatta City, Pune </h4>
-          <h4 style="color: #46d928;font: bold">Current Balance:-200,000/- </h4>
+          <h4 id='cb' style="color: #46d928;font: bold">Current Balance:- 50,000/-</h4>
+        </div>
+        <div style="float: left; text-align: start;">
+          <h3>
+            <div id="limit">Kindly set your <b>limit</b> for this month...</div>
+            <div id="spareMoney"></div>
+          </h3>
         </div>
       </div>
     </section>
