--- a/client/app/limit/limit.html
+++ b/client/app/limit/limit.html
@@ -13,9 +13,9 @@
       <div class="row">
         <div class="col-lg-4 col-lg-offset-4">
           <div class="input-group">
-            <input type="text" class="form-control" />
+            <input id='limitVal' type="number" class="form-control" />
             <span class="input-group-btn">
-                <button class="btn btn-default" type="button">Click me!</button>
+                <button id='setlimit' ng-click="limit.setlimit()" class="btn btn-default" type="button">Click me to set your Limit!</button>
             </span>
           </div><!-- /input-group -->
         </div><!-- /.col-lg-4 -->
